--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -130,6 +130,9 @@
                     <a  class="breadcrumb-item" href="/operation/user">My Documents</a>
                 </li>
                 <li>
+                    <a class="breadcrumb-item" href="/about">About</a>
+                </li>
+                <li>
                     <a class="breadcrumb-item" href="/contact">Contact</a>
                 </li>
                 <li>
