--- a/src/main/resources/templates/doc.html
+++ b/src/main/resources/templates/doc.html
@@ -15,6 +15,10 @@
           crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="sweetalert2.min.css">
+
     <!--  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
     <!--  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
     <!--  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>-->
@@ -97,9 +101,15 @@
                     <div class="text-center">
                         <h2 class="text-center" style="color: white">Upload Files</h2>
                         <p style="color: white">You can upload multiple files here.</p>
+                        <label style="color: white" for="api">Choose an Api:</label>
+                        <select style="color: #E85C99" id="api" name="api">
+                            <option style="color: #E85C99" value="Qualichain">QualiChain</option>
+                            <option style="color: #E85C99" value="Blcokcerts">BlockCerts</option>
+                        </select>
                         <div class="panel-body">
 
-                            <form id="uploadFiles" name="uploadFiles" method="post" th:action="@{/uploadFiles}"
+                            <form id="uploadFiles" name="uploadFiles" method="post" class="swa-confirm"
+                                  th:action="@{/uploadFiles}"
                                   encType="multipart/form-data">
                                 <div class="box-input">
                                     <svg x="0px" y="0px" viewBox="0 0 64 62" style="enable-background:new 0 0 64 62;"
@@ -131,9 +141,95 @@
 </g>
 </svg>
                                     <input id="files" type="file" name="files" multiple required/>
-                                    <button type="submit" id="submit" class="submit">Submit</button>
+                                    <button class="btn btn-primary authentication" type="submit">Check!</button>
+                                    <button type="submit" id="submit" name="submit" class="submit submit-doc" disabled>
+                                        Save
+                                    </button>
+                                    <br>
+                                    <span id="message"></span>
                                 </div>
                             </form>
+
+                            <script>
+                                $('.authentication').on('click', function (e) {
+
+                                    var min = 0.01;
+                                    var max = 0.99;
+                                    var random = (Math.random() * (max - min) + min).toFixed(2);
+
+                                    e.preventDefault();
+                                    let form = $(this).parents('uploadFiles');
+                                    let self = $(this);
+                                    console.log(self.data('title'));
+                                    let input = document.getElementById('api').value;
+                                    //check if file exists
+                                    var fileInput = document.getElementById('files');
+                                    var filePath = fileInput.value;
+                                    // Allowing file type
+                                    var allowedExtensions = /(\.doc|\.docx|\.odt|\.pdf|\.tex|\.txt|\.rtf|\.wps|\.wks|\.wpd)$/i;
+                                    if (!allowedExtensions.exec(filePath)) {
+                                        document.getElementById('message').style.color = 'red';
+                                        document.getElementById('message').innerHTML = 'You have to upload a valid Document first...';
+                                    } else {
+                                        if (random > 0.5) {
+                                            document.getElementById('message').innerHTML = '';
+                                            document.getElementById('submit').disabled = false;
+                                            Swal.fire({
+                                                title: 'Your documents are Certified in ' + input + ' Api!',
+                                                text: "You can save it by clicking the save button!",
+                                                icon: 'success'
+                                                // showCancelButton: true,
+                                                // confirmButtonColor: '#3085d6',
+                                                // cancelButtonColor: '#d33',
+                                                // confirmButtonText: 'Yes, delete it!'
+                                            }).then((result) => {
+                                                if (result.isConfirmed) {
+                                                    // form.submit();
+                                                    // $( "button[name=submit]" ).trigger('click');
+                                                    // $('.swa-confirm').submit();
+                                                    $(this).closest('form').submit();
+                                                    Swal.fire({
+                                                            title: 'Where to find it?',
+                                                            text: 'You can find the documents in My Documents tab!',
+                                                            icon: 'info',
+                                                            showConfirmButton: false,
+                                                        }
+                                                    )
+                                                    // location.href =  self.attr('href');
+                                                }
+                                            })
+                                        }
+                                        else{
+                                            document.getElementById('message').innerHTML = '';
+                                            document.getElementById('submit').disabled = true;
+                                            Swal.fire({
+                                                title: 'Your documents are NOT Certified in ' + input + ' Api..',
+                                                text: "You can try again!",
+                                                icon: 'error'
+                                                // showCancelButton: true,
+                                                // confirmButtonColor: '#3085d6',
+                                                // cancelButtonColor: '#d33',
+                                                // confirmButtonText: 'Yes, delete it!'
+                                            }).then((result) => {
+                                                if (result.isConfirmed) {
+                                                    // form.submit();
+                                                    // $( "button[name=submit]" ).trigger('click');
+                                                    // $('.swa-confirm').submit();
+                                                    $(this).closest('form').submit();
+                                                    Swal.fire({
+                                                            title: 'Possible Solution!',
+                                                            text: 'Try to choose different Api!',
+                                                            icon: 'info',
+                                                            showConfirmButton: false,
+                                                        }
+                                                    )
+                                                    // location.href =  self.attr('href');
+                                                }
+                                            })
+                                        }
+                                    }
+                                })
+                            </script>
 
                         </div>
 
@@ -146,11 +242,11 @@
 
 <script src="../../dist/verifier-iife.js"></script>
 <script>
-    window.onload = function() {
+    window.onload = function () {
 
         let myForm = document.getElementById('uploadFiles');
 
-        myForm.onsubmit = function(event) {
+        myForm.onsubmit = function (event) {
 
             event.preventDefault;
 
@@ -208,7 +304,7 @@
 
     input[type="button" i],
     input[type="file" i]::-webkit-file-upload-button {
-        display: none!important;
+        display: none !important;
     }
 
 
@@ -248,13 +344,13 @@
 
     @keyframes appear-from-inside {
         from {
-            transform: translateY( -50%) scale( 0);
+            transform: translateY(-50%) scale(0);
         }
         75% {
-            transform: translateY( -50%) scale( 1.1);
+            transform: translateY(-50%) scale(1.1);
         }
         to {
-            transform: translateY( -50%) scale( 1);
+            transform: translateY(-50%) scale(1);
         }
     }
 
