--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -42,16 +42,50 @@
       <div class="panel panel-default" style="background-color: white">
         <div class="panel-body">
           <div class="text-center">
-            <h3 class="text-center" style="color: #000000">What is blockchain?</h3>
-            <p style="color: #000000">.............</p>
+            <h3 class="text-center" style="color: #E85C99">About the project "Certified"</h3>
+            <p class="text-left" style="color:#24bbff ">The goal is to implement a platform that anyone can have free access to and verify
+              documents through the blockchain. The users of this platform are the main user or recruiter who wants to verify
+              a certificate through the blockchain and the admin user or company who can manage subscriptions. This platform will
+              help each individual to have a legit verification for the documents he needs and saves him time because the old certification
+              methods are very time-consuming and demanding. Finally, the primary tasks of the project is to develop a platform-webapp that is
+              usable, creat understandable documentations and functional-adaptive code.</p>
+            <p style="color: #E85C99; font-weight: bold">Link to Project code:<a style="color: #24bbff; font-weight: bold" href="https://github.com/damianosp7/Certified">GitHub</a></p>
             <div class="panel-body">
-              <h4 class="text-center" style="color: #000000">Benefits of verifying documents through blockchain?</h4>
-              <p style="color: #000000">.............</p>
+              <h4 class="text-left" style="color: #f6bf01">What is blockchain?</h4>
+              <p style="color: #24bbff" class="text-left">A blockchain is a public digital ledger of transactions that records information in a way that makes it difficult to hack or alter. The technology allows a secure way for individuals to deal directly with each other, without an intermediary like a government, bank or other third party.</p>
+              <h4 class="text-left" style="color: #f6bf01">Benefits of verifying documents through blockchain?</h4>
+              <p class="text-left" style="color: #24bbff">1. Trust </p>
+              <p class="text-left" style="color: #24bbff">2. Security </p>
+              <p class="text-left" style="color: #24bbff">3. Simplicity</p>
+              <p class="text-left" style="color: #24bbff">4. Integrity </p>
+              <p class="text-left" style="color: #24bbff">5. Privacy </p>
+
               <br>
               <br>
-              <h4 class="text-center" style="color: #000000">Apis that we work with?</h4>
-              <p style="color: #000000">-Qualichain</p>
-              <p style="color: #000000">-BlockCerts</p>
+              <h4 class="text-left" style="color: #f6bf01">Apis that we work with?</h4>
+              <p class="text-left"><a style="color: #24bbff; font-weight: bold" href="http://qualichain.epu.ntua.gr/">Qualichain</a></p>
+              <p class="text-left"><a style="color: #24bbff; font-weight: bold" href="https://www.blockcerts.org/">BlockCerts</a></p>
+<!--              <p style="color: #000000">-Qualichain</p>-->
+<!--              <p style="color: #000000">-BlockCerts</p>-->
+              <h4 class="text-center" style="color: #E85C99">Guide how to use</h4>
+              <h4 class="text-left" style="color: #f6bf01; font-weight: bold">Step 1 </h4>
+              <p class="text-left" style="color: #24bbff">Choose an Api to verify your document. (BlockCerts or Qualichain) </p>
+              <h4 class="text-left" style="color: #f6bf01; font-weight: bold">Step 2 </h4>
+              <p class="text-center" style="color: #24bbff; font-weight: bold">BlockCerts</p>
+              <p class="text-left" style="color: #24bbff">-Upload a .json format file. </p>
+              <p class="text-center" style="color: #24bbff; font-weight: bold">Qualichain</p>
+              <p class="text-left" style="color: #24bbff"> - Input the address of the account used to upload the certificate
+                ("0x2CefB619218825C0c670D8E77f7039e0693E1dDC" by default) . </p>
+              <p class="text-left" style="color: #24bbff">             - Input the civil ID. The Civil ID should be the same as the name of the certificate (pdf file) (e.g., 12345678) </p>
+              <p class="text-left" style="color: #24bbff">             - Select the certificate to validate (e.g., 12345678.pdf)</p>
+              <h4 class="text-left" style="color: #f6bf01; font-weight: bold">Step 3 </h4>
+              <p class="text-left" style="color: #24bbff">Click the verify button! </p>
+              <h4 class="text-left" style="color: #f6bf01; font-weight: bold">Step 4 </h4>
+              <p class="text-left" style="color: #24bbff">If the verification is successful you can save the document by clicking the save button! Otherwise try again with different api this time..   </p>
+              <p>
+                <img src="img/true.png" alt="Smiley face" style="float:left;width:420px;height:300px;">
+                <img src="img/false.png" alt="Smiley face" style="float:right;width:420px;height:300px;">
+              </p>
 
 
             </div>
