--- a/src/main/resources/templates/doc.html
+++ b/src/main/resources/templates/doc.html
@@ -101,7 +101,7 @@
                 <div class="panel-body">
                     <div class="text-center">
                         <h2 class="text-center" style="color: white">Upload Files</h2>
-                        <p style="color: white">You can upload multiple files here.</p>
+                        <p style="color: white">You can upload your file here.</p>
                         <label style="color: white" for="api">Choose an Api:</label>
                         <select style="color: #E85C99" id="api" name="api">
                             <option style="color: #E85C99" value="Qualichain">QualiChain</option>
@@ -296,9 +296,10 @@
         const input = document.getElementById('files').files[0];
         // const input = document.querySelector("input[type=file]");
         console.log(input);
+
         const certificate = new Verifier.Certificate(input);
         console.log(certificate);
-        // await certificate.init();
+        await certificate.init();
         const verificationResult = await certificate.verify(({code, label, status, errorMessage}) => {
             console.log('Code:', code, label, ' - Status:', status);
             if (errorMessage) {
@@ -315,9 +316,10 @@
     });
 
     // $('.authentication').on('click', async () => {
-    //     const input = document.querySelector("input[type=file]");
+    //     const input = document.getElementById('files').files[0];
+    //     // const input = document.querySelector("input[type=file]");
     // $.ajax({
-    //     url: "https://blockcerts.learningmachine.com/#verification",
+    //     url: "https://api-ropsten.opencerts.io/verify",
     //     type: "POST",
     //     dataType: "json",
     //     contentType: "application/json; charset=utf-8",
@@ -437,7 +439,7 @@
     const Web3 = require('web3');
     const web3 = new Web3('https://ropsten.infura.io/v3/66a470c1158f441cac9c502cd63d4b9b');
 
-    const consortiumAddress = '0xA6B9A8bD75a586e5d713C23682cF0fb252aD0Cff';
+    const consortiumAddress = '0x2CefB619218825C0c670D8E77f7039e0693E1dDC';
     const consortiumABI = [{"inputs":[],"payable":false,"stateMutability":"nonpayable","type":"constructor"},{"constant":false,"inputs":[{"internalType":"address","name":"id","type":"address"},{"internalType":"uint256","name":"vote","type":"uint256"}],"name":"cancelHEI","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":false,"inputs":[{"internalType":"uint256","name":"value","type":"uint256"},{"internalType":"uint256","name":"vote","type":"uint256"}],"name":"changeThreshold","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":true,"inputs":[{"internalType":"address","name":"id","type":"address"}],"name":"getHEI","outputs":[{"internalType":"address","name":"add","type":"address"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":true,"inputs":[],"name":"getPollingInfo","outputs":[{"internalType":"address[]","name":"","type":"address[]"},{"internalType":"address[]","name":"","type":"address[]"},{"internalType":"address[]","name":"","type":"address[]"},{"internalType":"uint256","name":"","type":"uint256"}],"payable":false,"stateMutability":"view","type":"function"},{"constant":false,"inputs":[{"internalType":"address","name":"id","type":"address"},{"internalType":"address","name":"contractAddress","type":"address"}],"name":"registerFounderHEI","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"},{"constant":false,"inputs":[{"internalType":"address","name":"id","type":"address"},{"internalType":"address","name":"contractAddress","type":"address"},{"internalType":"uint256","name":"vote","type":"uint256"}],"name":"registerHEI","outputs":[],"payable":false,"stateMutability":"nonpayable","type":"function"}];
     const consortiumContract = new web3.eth.Contract(consortiumABI,consortiumAddress);
 
@@ -564,26 +566,26 @@
     function checkIssuerId(strId) {
         if(strId == null || strId === '') {
             document.getElementById("result").style.display = "block";
-            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID";
+            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID 1";
             document.getElementById("resultText").style.color = "red";
             return null;
         }
         var idArray = strId.split(':');
         if(idArray.length !== 3 || idArray[0] !== 'did' || idArray[1] !== 'ethr'){
             document.getElementById("result").style.display = "block";
-            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID";
+            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID 2";
             document.getElementById("resultText").style.color = "red";
             return null;
         }
         else if(idArray[2].length !== 42 || idArray[2].slice(0,2) !== '0x') {
             document.getElementById("result").style.display = "block";
-            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID";
+            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID 3";
             document.getElementById("resultText").style.color = "red";
             return null;
         }
         else if(!web3.utils.isAddress(idArray[2])) {
             document.getElementById("result").style.display = "block";
-            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID";
+            document.getElementById("resultText").innerHTML = "Insert a valid Issuer ID 4";
             document.getElementById("resultText").style.color = "red";
             return null;
         }
